public class Constants {
    public const string ANIM_PLAYER_moveX = "moveX";   //float
    public const string ANIM_PLAYER_moveY = "moveY";   //float
    public const string ANIM_PLAYER_is_moving = "moving";  //bool
    public const string ANIM_PLAYER_attack = "attack";  //trigger
    public const string ANIM_PLAYER_hurt = "hurt";    //trigger
    public const string ANIM_PLAYER_holding = "holding"; //bool

    public const string ANIM_CHEST_OPENED = "open"; //bool

    public const string ANIM_ENTITY_is_moving = "moving"; //bool
    public const string ANIM_ENTITY_moveX     = "moveX";  //float
    public const string ANIM_ENTITY_moveY     = "moveY";  //float
    public const string ANIM_ENTITY_die       = "die";  //trigger

    public const string ANIM_LOG_awake = "awake";  //bool

    public const string ANIM_OGRE_attacking = "attacking";  //bool

    public const string ANIM_PROJECTILE_VANISH = "vanish"; //trigger

    public const string DEFAULT_CHEST = "You received {0}!";
    public const string DEFAULT_CHEST_EMPTY = "This chest is empty!";

    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "enemy";
}